--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
     "local": "node src/index.js",
     "dev": "nodemon src/index.js",
     "test": "jest --coverage --verbose --reporter=lcov --reporter=text --detectOpenHandles --runInBand --forceExit",
