--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  jest:        
-    uses: ziishaned/jest-reporter-action@v0.0.1
-    with:
-      github-token: ${{ secrets.GITHUB_TOKEN }}
-      test-command: "yarn jest --coverage"
+
+  jest: 
+    name: TestUnit
+    runs-on: ubuntu-latest   
+    steps:    
+      - uses: ziishaned/jest-reporter-action@v0.0.1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          test-command: "npm run test"
