--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,5 @@ jobs:
     name: TestUnit
     runs-on: ubuntu-latest   
     steps:    
-      - uses: ziishaned/jest-reporter-action@v0.0.1
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          test-command: "npm run test"
+      - uses: actions/checkout@v1
+      - run: npm run test
