--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,4 +33,5 @@ jobs:
     runs-on: ubuntu-latest   
     steps:    
       - uses: actions/checkout@v1
+      - run: npm i
       - run: npm run test
